--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -18,8 +18,9 @@
             -Select Product-
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item " href="#">Clover Capital</a>
-            <a class="dropdown-item" href="#">Advanced Same Day Funding </a>
+             
+            <a class="dropdown-item" >Clover Capital</a>
+            <a class="dropdown-item" >Advanced Same Day Funding </a>
           </div>
         </div>
 
@@ -31,8 +32,9 @@
         <div class="clearfix"></div>
 
         <div class=" but-wrap d-md-block d-sm-none d-none ">
-          <button type="button" class="btn btn-outline-primary">Clover Capital</button>
-          <button type="button" class="btn btn-outline-primary ">Advanced Same Day Funding</button>
+           
+          <button type="button" class="btn btn-outline-secondary" class="btn btn-outline-primary"  ngbTooltip="You see, I show up on click!" triggers="click:blur">Clover Capital</button>
+          <button type="button" class="btn btn-outline-secondary" class="btn btn-outline-primary"  ngbTooltip="You see, I show up on click!" triggers="click:blur" class="btn btn-outline-primary ">Advanced Same Day Funding</button>
         </div>
         <div class="icon-wrap  float-right">
           <!--<span class="chatWrap   float-right d-none">-->
