--- a/src/app/auth/sign-up/signup-main/signup-main.component.html
+++ b/src/app/auth/sign-up/signup-main/signup-main.component.html
@@ -1,10 +1,10 @@
 <div id="signWrap" class="container-fluid">
   <div class="row">
     <div class="col-sm-12  col-md-6 col-lg-6     ">
-      <app-signup-form></app-signup-form>
+      <app-signup-form (ctab)="ctab($event)"></app-signup-form>
     </div>
     <div class="col-sm-12   col-md-6 col-lg-5        ">
-      <app-signup-stat></app-signup-stat>
+      <app-signup-stat [hidden]="showstat"></app-signup-stat>
     </div>
 
   </div>
