--- a/src/app/dashboard/contact/contact.component.html
+++ b/src/app/dashboard/contact/contact.component.html
@@ -4,7 +4,7 @@
     <ol class="breadcrumb  w-100">
       <li class="breadcrumb-item">urLease</li>
       <li class="breadcrumb-item">Dashboard</li>
-      <li class="breadcrumb-item active">Equipment</li>
+      <li class="breadcrumb-item active">Contact</li>
     </ol>
 
   </div>
