--- a/src/app/dashboard/epp/eppstatic/eppstatic.component.html
+++ b/src/app/dashboard/epp/eppstatic/eppstatic.component.html
@@ -1,3 +1,75 @@
-<p style="padding: 100px">
-  eppstatic works!
-</p>
+<div class="col-12 db-inner-wrap  ">
+  <!--breadcrums Starts Here-->
+  <div class="row db-bread-wrap">
+    <ol class="breadcrumb  w-100">
+      <li class="breadcrumb-item">urLease</li>
+      <li class="breadcrumb-item">Dashboard</li>
+      <li class="breadcrumb-item active">EPP</li>
+    </ol>
+
+  </div>
+  <!--wraper for FAQ-->
+  <div class="db-inner-box col-12 epp eol ">
+  
+  <div class="faqWrap">EPP</div>
+<div class="btmBorder"></div>
+<br>
+
+    <p class="text-center">The First Data Equipment Protection Program provides FULL REPLACEMENT protection for loss due to a wide variety
+      of perils.</p>
+
+      <div class="btmBorder"></div>
+
+
+    <!--EPP  Covers List Starts-->
+    <div class="row ">
+      <div class="col-12 col-sm-6 listWrap ">
+        <ul>
+          <li>
+            Accidental Damage
+          </li>
+          <li> Burglary Theft and Robbery</li>
+          <li> Collapse</li>
+          <li> Employee Theft</li>
+          <li> Falling Objects</li>
+          <li> Fire and Smoke
+        </ul>
+
+      </div>
+      <div class="col-12 col-sm-6 listWrap">
+        <ul>
+          <li>
+            Hail
+
+          </li>
+          <li> Flood and Water
+          </li>
+          <li>Lightning and Power Surge
+          </li>
+          <li> Transit
+          </li>
+          <li> Vandalism
+          </li>
+          <li> Wind, Hurricane and Tornado
+        </ul>
+
+      </div>
+      <div class=" ftrtxt ">Perils shown in bold above are often not covered by standard business
+        insurance
+        policies.
+      </div>
+    </div>
+    <!--EPP  Covers List  Ends-->
+
+
+    <!--Horizondal Line Starts-->
+    <div class="btmBorder"></div>
+    <!--Horizondal Line Starts-->
+
+    <br><br> <br><br> <br><br> <br><br> <br><br> <br><br>
+
+
+  </div>
+</div>
+
+
