--- a/src/app/dashboard/epp/eppthank/eppthank.component.html
+++ b/src/app/dashboard/epp/eppthank/eppthank.component.html
@@ -1,20 +1,19 @@
-<div id="signWrap" class="container-fluid">
-  <div class="row">
-    <div class="col-sm-12 success-wrap th-outer-wrap  ">
-      <h1 id="brandLogo" class="text-center"><img src="./assets/img/firstdata_logo.svg"></h1>
-      <h1 class="text-center th-logowrap"><img src="./assets/img/TickIcon.svg"></h1>
-      <h1 class="text-center th-head ">Thank you</h1>
-      <p class="text-center th-txt">Please check your email for instructions on resetting your password.</p>
-      <h6 class="text-center th-txt-sm">
-        2017-2018 First Data Corporation. All Rights Reserved. <a href="#">Privacy
-        Policy</a>
-      </h6>
-
-      <button type="submit" (click)="dboard()"
-              class="btnSubmit btn btn-primary btn-lg btn-block">Done
-      </button>
-
+<div id="signWrap" class="container-fluid eppthankwrap">
+    <div class="row">
+      <div class="col-sm-12 success-wrap th-outer-wrap  ">
+        <br><br><br><br>
+        <h1 id="brandLogo" class="text-center"><img src="./assets/img/firstdata_logo.svg"></h1>
+        <h1 class="text-center th-logowrap"><img src="./assets/img/TickIcon.svg"></h1>
+        <h1 class="text-center th-head ">Thank you</h1>
+        <p class="text-center th-txt">You have successfully enrolled for EPP. Your EPP status will be updated in the next 24-48 hours</p>
+  
+          <br><br>
+        <button type="submit" (click)="dboard()"
+                class="btnSubmit btn btn-primary btn-lg btn-block">Done
+        </button>
+  
+      </div>
+  
     </div>
-
   </div>
-</div>
+  
