--- a/src/app/dashboard/faq/faq.component.html
+++ b/src/app/dashboard/faq/faq.component.html
@@ -2,8 +2,8 @@
   <!--breadcrums Starts Here-->
   <div class="row db-bread-wrap">
     <ol class="breadcrumb  w-100">
-      <li class="breadcrumb-item"><a href="#">urLease</a></li>
-      <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+      <li class="breadcrumb-item">urLease</li>
+      <li class="breadcrumb-item">Dashboard</li>
       <li class="breadcrumb-item active">FAQ</li>
     </ol>
 
