new changes made today

--- a/src/app/dashboard/epp/epp.component.html
+++ b/src/app/dashboard/epp/epp.component.html
@@ -1,216 +1,216 @@
 <div  *ngIf="dataReady">
 <eppstatic [hidden]="!showeppstatic"></eppstatic>
 <div [hidden]="showeppstatic">
-<div class="col-12 db-inner-wrap  ">
-  <!--breadcrums Starts Here-->
-  <div class="row db-bread-wrap">
-    <ol class="breadcrumb  w-100">
-      <li class="breadcrumb-item">urLease</li>
-      <li class="breadcrumb-item">Dashboard</li>
-      <li class="breadcrumb-item active">EPP</li>
-    </ol>
-
-  </div>
-  <!--wraper for FAQ-->
-  <div class="db-inner-box col-12 epp eol ">
-    <!--EPP basic Details Starts-->
-    <div class="row ">
-      <div class="col-12">
-        <ul class="details">
-          <li>
-            <label>Merchant Name:</label>
-            <span class="">{{merchanName}}</span>
-          </li>
-          <li>
-            <label>
-              Contact Name:</label>
-            <span class="">{{contactName}}</span>
-          </li>
-          <li>
-            <label>Total Monthly EPP:</label>
-            <span class="activeBg"> ${{totalAmt}}.00</span>
-          </li>
-
-        </ul>
-      </div>
-
+  <div class="col-12 db-inner-wrap  ">
+    <!--breadcrums Starts Here-->
+    <div class="row db-bread-wrap">
+      <ol class="breadcrumb  w-100">
+        <li class="breadcrumb-item">urLease</li>
+        <li class="breadcrumb-item">Dashboard</li>
+        <li class="breadcrumb-item active">EPP</li>
+      </ol>
+  
     </div>
-    <!--EPP basic Details Ends-->
-
-
-    <!--Horizondal Line Starts-->
-    <div class="btmBorder"></div>
-    <!--Horizondal Line Starts-->
-
-
-    <!--Toggle Button Starts-->
-    <div class="row ">
-      <div class="col-12">
-        <!--warning txt Starts-->
-        <p class="cntTxt">
-          You have the following leases that do not have any equipment protection coverage. Please select the leases for
-          which you would like to have EPP coverage. </p>
-        <!--warning txt Ends-->
-
-
-        <!--Epp Lease toggles Starts-->
-        <div class="row">
-          <div class="toggleWrap" *ngIf="leaseData">
-            <div class="toggle-item-wrap" [ngClass]="{ 'active': leaseFormGroup.controls[item.leaseNo].value }"
-                 *ngFor="let item of leaseData">
-              <div class="leftWrap">
-                <p class="">Lease #</p>
-                <p class="">{{item.leaseNo}}</p>
+    <!--wraper for FAQ-->
+    <div class="db-inner-box col-12 epp eol ">
+      <!--EPP basic Details Starts-->
+      <div class="row ">
+        <div class="col-12">
+          <ul class="details">
+            <li>
+              <label>Merchant Name:</label>
+              <span class="">{{merchanName}}</span>
+            </li>
+            <li>
+              <label>
+                Contact Name:</label>
+              <span class="">{{contactName}}</span>
+            </li>
+            <li>
+              <label>Total Monthly EPP:</label>
+              <span class="activeBg"> ${{totalAmt}}.00</span>
+            </li>
+  
+          </ul>
+        </div>
+  
+      </div>
+      <!--EPP basic Details Ends-->
+  
+  
+      <!--Horizondal Line Starts-->
+      <div class="btmBorder"></div>
+      <!--Horizondal Line Starts-->
+  
+  
+      <!--Toggle Button Starts-->
+      <div class="row ">
+        <div class="col-12">
+          <!--warning txt Starts-->
+          <p class="cntTxt">
+            You have the following leases that do not have any equipment protection coverage. Please select the leases for
+            which you would like to have EPP coverage. </p>
+          <!--warning txt Ends-->
+  
+  
+          <!--Epp Lease toggles Starts-->
+          <div class="row">
+            <div class="toggleWrap" *ngIf="leaseData">
+              <div class="toggle-item-wrap" [ngClass]="{ 'active': leaseFormGroup.controls[item.leaseNo].value }"
+                   *ngFor="let item of leaseData">
+                <div class="leftWrap">
+                  <p class="">Lease #</p>
+                  <p class="">{{item.leaseNo}}</p>
+                </div>
+                <div class="rightWrap">
+                  <p class=""><label class="switch">
+                    <input type="checkbox" class="togBtn" id="togBtn"
+                           [formControl]="leaseFormGroup.controls[item.leaseNo]" (change)="onToggleChange($event)">
+                    <span class="slider round en-first-checkbox"></span>
+                  </label></p>
+                  <p class="">${{leaseFormGroup.controls[item.leaseNo].value?'10':'0'}}.00</p>
+                </div>
+  
+  
               </div>
-              <div class="rightWrap">
-                <p class=""><label class="switch">
-                  <input type="checkbox" class="togBtn" id="togBtn"
-                         [formControl]="leaseFormGroup.controls[item.leaseNo]" (change)="onToggleChange($event)">
-                  <span class="slider round en-first-checkbox"></span>
-                </label></p>
-                <p class="">${{leaseFormGroup.controls[item.leaseNo].value?'10':'0'}}.00</p>
-              </div>
-
-
             </div>
+  
           </div>
-
+          <!--Epp Lease toggles Ends-->
+  
         </div>
-        <!--Epp Lease toggles Ends-->
-
       </div>
-    </div>
-    <!--Toggle Button Ends-->
-
-    <!--Horizondal Line Starts-->
-
-    <div class="btmBorder"></div>
-    <!--Horizondal Line Starts-->
-
-
-    <!--Checkbox Boxes Wrap Starts Here-->
-    <div class="row ">
-      <div class="col-12">
-
-
-        <!--Check Box Starts-->
-
-        <div class="epp-cb-wrap" [ngClass]="{ 'opacity-disable' : checkbox.agree }">
-          <input type="checkbox" [checked]="yesModel" [disabled]="checkbox.yes" name="option1" id="checkbox1"
-                 class="check1" value="yes" (change)="onYesNoClicked($event)"/>
-          <label for="checkbox1" class="label1"> YES, I choose to enroll in First Data's Equipment Protection
-            Program</label>
-
-          <input type="checkbox" [checked]="noModel" [disabled]="checkbox.no" name="option2" id="checkbox2"
-                 class="check2" value="no" (change)="onYesNoClicked($event)"/>
-          <label for="checkbox2" class="label2"> NO, I am providing a certificate of insurance that names First Data
-            as the
-            loss payee to meet the insurance requirement of my lease agreement. The
-            insurance certificate is included with this response </label>
+      <!--Toggle Button Ends-->
+  
+      <!--Horizondal Line Starts-->
+  
+      <div class="btmBorder"></div>
+      <!--Horizondal Line Starts-->
+  
+  
+      <!--Checkbox Boxes Wrap Starts Here-->
+      <div class="row ">
+        <div class="col-12">
+  
+  
+          <!--Check Box Starts-->
+  
+          <div class="epp-cb-wrap" [ngClass]="{ 'opacity-disable' : checkbox.yes }">
+            <input type="checkbox" [checked]="yesModel" [disabled]="checkbox.yes" name="option1" id="checkbox1"
+                   class="check1" value="yes" (change)="onYesNoClicked($event)"/>
+            <label for="checkbox1" class="label1"> YES, I choose to enroll in First Data's Equipment Protection
+              Program</label>
+  
+            <input type="checkbox" [checked]="noModel" [disabled]="checkbox.no" name="option2" id="checkbox2"
+                   class="check2" value="no" (change)="onYesNoClicked($event)"/>
+            <label for="checkbox2" class="label2"> NO, I am providing a certificate of insurance that names First Data
+              as the
+              loss payee to meet the insurance requirement of my lease agreement. The
+              insurance certificate is included with this response </label>
+          </div>
+          <!--Check Box Ends-->
+  
+          <!--cnt Txt Starts-->
+          <p>
+            Enrollment in the First Data Equipment Protection Program relieves you of the requirement
+            to maintain insurance on your leased equipment</p>
+          <p>
+            By checking YES above, the Lessee(s) is/are relived of their obligation to provide
+            proof
+            of insurance under the Lease Agreement. Each lease that checks Yes above pays a
+            monthly
+            charge to FDMS, determined by FBMS and included on the monthly lease payment. The
+            monthly charge includes a program fee and compensation to EDMS for program
+            administration. FDMS reserves the right to change the monthly charge. We will notify you
+            thirty (30) days prior to the effective date of charge.</p>
+          <p>
+            Board Protection: The First Data Equipment Protection Program provides FULL REPLACEMENT
+            protection for loss due to a wide variety of perils.</p>
+          <!--cnt Txt Ends-->
+  
+  
         </div>
-        <!--Check Box Ends-->
-
-        <!--cnt Txt Starts-->
-        <p>
-          Enrollment in the First Data Equipment Protection Program relieves you of the requirement
-          to maintain insurance on your leased equipment</p>
-        <p>
-          By checking YES above, the Lessee(s) is/are relived of their obligation to provide
-          proof
-          of insurance under the Lease Agreement. Each lease that checks Yes above pays a
-          monthly
-          charge to FDMS, determined by FBMS and included on the monthly lease payment. The
-          monthly charge includes a program fee and compensation to EDMS for program
-          administration. FDMS reserves the right to change the monthly charge. We will notify you
-          thirty (30) days prior to the effective date of charge.</p>
-        <p>
-          Board Protection: The First Data Equipment Protection Program provides FULL REPLACEMENT
-          protection for loss due to a wide variety of perils.</p>
-        <!--cnt Txt Ends-->
-
-
+  
+  
       </div>
-
-
-    </div>
-    <!--Checkbox Boxes Wrap Starts Here-->
-
-
-    <!--EPP  Covers List Starts-->
-    <div class="row ">
-      <div class="col-12 col-sm-6 listWrap ">
-        <ul>
-          <li>
-            Accidental Damage
-          </li>
-          <li> Burglary Theft and Robbery</li>
-          <li> Collapse</li>
-          <li> Employee Theft</li>
-          <li> Falling Objects</li>
-          <li> Fire and Smoke
-        </ul>
-
-      </div>
-      <div class="col-12 col-sm-6 listWrap">
-        <ul>
-          <li>
-            Hail
-
-          </li>
-          <li> Flood and Water
-          </li>
-          <li>Lightning and Power Surge
-          </li>
-          <li> Transit
-          </li>
-          <li> Vandalism
-          </li>
-          <li> Wind, Hurricane and Tornado
-        </ul>
-
-      </div>
-      <div class=" ftrtxt ">Perils shown in bold above are often not covered by standard business
-        insurance
-        policies.
-      </div>
-    </div>
-    <!--EPP  Covers List  Ends-->
-
-
-    <!--Horizondal Line Starts-->
-    <div class="btmBorder"></div>
-    <!--Horizondal Line Starts-->
-
-
-    <!--submit but wrap Starts-->
-    <div class="row ">
-
-      <div class="col-sm-12 col-md-9">
-        <!--Check Box Starts-->
-        <div class="epp-cb-wrap" [ngClass]="{ 'opacity-disable' : checkbox.agree }">
-          <input type="checkbox" [checked]="agreeModel" [disabled]="checkbox.agree" name="option1" id="checkbox3" value="agree" class="check3" (change)="onYesNoClicked($event)"/>
-          <label for="checkbox3" class="label3"> I agree to the First Data Terms of Service and Privacy Policy</label>
-
+      <!--Checkbox Boxes Wrap Starts Here-->
+  
+  
+      <!--EPP  Covers List Starts-->
+      <div class="row ">
+        <div class="col-12 col-sm-6 listWrap ">
+          <ul>
+            <li>
+              Accidental Damage
+            </li>
+            <li> Burglary Theft and Robbery</li>
+            <li> Collapse</li>
+            <li> Employee Theft</li>
+            <li> Falling Objects</li>
+            <li> Fire and Smoke
+          </ul>
+  
         </div>
-        <!--Check Box Ends-->
-
-
+        <div class="col-12 col-sm-6 listWrap">
+          <ul>
+            <li>
+              Hail
+  
+            </li>
+            <li> Flood and Water
+            </li>
+            <li>Lightning and Power Surge
+            </li>
+            <li> Transit
+            </li>
+            <li> Vandalism
+            </li>
+            <li> Wind, Hurricane and Tornado
+          </ul>
+  
+        </div>
+        <div class=" ftrtxt ">Perils shown in bold above are often not covered by standard business
+          insurance
+          policies.
+        </div>
       </div>
-
-      <div class="col-sm-12 col-md-3 ftrBtnWrap  text-md-right text-center">
-          <button type="button" [disabled]="checkbox.submit" [routerLink]="['/dashboard/eppthank']" class="btn butSec">
-          Submit
-
-        </button>
+      <!--EPP  Covers List  Ends-->
+  
+  
+      <!--Horizondal Line Starts-->
+      <div class="btmBorder"></div>
+      <!--Horizondal Line Starts-->
+  
+  
+      <!--submit but wrap Starts-->
+      <div class="row ">
+  
+        <div class="col-sm-12 col-md-9">
+          <!--Check Box Starts-->
+          <div class="epp-cb-wrap" [ngClass]="{ 'opacity-disable' : checkbox.agree }">
+            <input type="checkbox" [checked]="agreeModel" [disabled]="checkbox.agree" name="option1" id="checkbox3" value="agree" class="check3" (change)="onYesNoClicked($event)"/>
+            <label for="checkbox3" class="label3"> I agree to the First Data Terms of Service and Privacy Policy</label>
+  
+          </div>
+          <!--Check Box Ends-->
+  
+  
+        </div>
+  
+        <div class="col-sm-12 col-md-3 ftrBtnWrap  text-md-right text-center">
+          <button type="button" [disabled]="checkbox.submit" [routerLink]="['/dashboard/eppthank']" class="btn butSec   ">
+            Submit
+  
+          </button>
+        </div>
+  
+  
       </div>
-
-
+      <!--submit but wrap Startss-->
     </div>
-    <!--submit but wrap Startss-->
   </div>
-</div>
-
-<epp-popup *ngIf="showPopup" [noButtonPopup]="noButtonPopup" (addClicked)="addButtonClicked();"
-           (closeClicked)="closePopup();"></epp-popup>
+  
+  <epp-popup *ngIf="showPopup" [noButtonPopup]="noButtonPopup" (addClicked)="addButtonClicked();"
+             (closeClicked)="closePopup();"></epp-popup>
 </div>
 </div>
