--- a/src/app/dashboard/epp/epp.component.html
+++ b/src/app/dashboard/epp/epp.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="!dataReady">Loading...</div>
 <div  *ngIf="dataReady">
 <eppstatic [hidden]="!showeppstatic"></eppstatic>
 <div [hidden]="showeppstatic">
